# onsem-android

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  jitpack.yml  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
onsem/: build-databases.sh  build.gradle
onsem/src/androidTest/java/com/onsem/: OnsemTests.kt  OperatorsTests.kt  StringReplacerTests.kt  TriggersTests.kt
onsem/src/androidTest/java/com/onsem/util/: TestExecutor.kt
onsem/src/main/assets/: readme.txt
onsem/src/main/cpp/: CMakeLists.txt
onsem/src/main/cpp/jni/: androidlog.hpp  javaoperatorenum.hpp  jobjectstocpptypes.cpp  jobjectstocpptypes.hpp  keytoassetstreams.hpp  linguisticdatabase-jni.cpp  linguisticdatabase-jni.hpp  onsem-jni.cpp  onsem-jni.h  recommendationsfinder-jni.cpp  semanticenumsindexes.cpp  semanticenumsindexes.hpp  semanticexpression-jni.cpp  semanticexpression-jni.hpp  semanticmemory-jni.cpp  stringreplacer-jni.cpp  textprocessingcontext-jni.cpp  textprocessingcontext-jni.hpp  triggers-jni.cpp
onsem/src/main/java/com/onsem/: ExecutionData.kt  JiniOutputter.kt  Onsem.kt  OnsemEnums.kt  RecommendationsFinder.kt  SemanticExpression.kt  SemanticMemory.kt  StringReplacer.kt  Triggers.kt
onsem/src/main/res/values/: colors.xml  strings.xml
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt
src/main/cpp/jni/: androidlog.hpp  jobjectstocpptypes.cpp  jobjectstocpptypes.hpp  semanticenumsindexes.cpp  semanticexpression-jni.cpp  semanticmemory-jni.cpp  semanticmemory-jni.hpp
src/main/java/com/onsem/: LinguisticDatabase.kt  OnsemEnums.kt  RecommendationsFinder.kt  SemanticExpression.kt  SemanticMemory.kt  TextProcessingContext.kt
src/main/res/values/: arrays.xml
